--- a/frontend/src/styles/TypeOfBooking.css
+++ b/frontend/src/styles/TypeOfBooking.css
@@ -63,7 +63,4 @@
   font-size: 1rem;
 }
 
-.custom-tag:hover {
-  opacity: 0.9;
-  transform: scale(1.03);
-}
+
